# icaofaceanalysis

./: LICENSE  README.md  pyproject.toml
data/: face185.jpeg.json
src/: face_client.py  face_webapp_aws.py  face_webapp_azure.py
