[tool.poetry]
name = "passportphoto"
version = "0.1.0"
description = ""
authors = ["Gary Ogasawara <garyogasawara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.38"
streamlit = "^1.31.0"
azure-cognitiveservices-vision-face = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
